Go_3rd: Fix depends

--- a/Go_3rd/Makefile
+++ b/Go_3rd/Makefile
@@ -1,4 +1,9 @@
-.PHONY: all clean
+.PHONY: all clean depends
+
+default: depends walk
+
+depends:
+	go get github.com/karrick/godirwalk
 
 %: %.go
 	go build -ldflags "-w -s" $<
