fix Go_3rd/Makefile and update results in README

--- a/Go_3rd/Makefile
+++ b/Go_3rd/Makefile
@@ -1,6 +1,8 @@
 .PHONY: all clean depends
 
-default: depends walk
+default: walk
+
+walk: depends
 
 depends:
 	go get github.com/karrick/godirwalk
